--- a/MessageSystem2/.project
+++ b/MessageSystem2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MessageSystem2</name>
+	<name>HaruGreen</name>
 	<comment></comment>
 	<projects>
 	</projects>
