기존 Main.jsp 삭제.

--- a/MessageSystem2/src/main/webapp/WEB-INF/web.xml
+++ b/MessageSystem2/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,13 @@
 		<servlet-name>payController</servlet-name>
 		<servlet-class>kr.smhrd.controller.payController</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>ProdController</display-name>
+		<servlet-name>ProdController</servlet-name>
+		<servlet-class>kr.smhrd.controller.ProdController</servlet-class>
+	</servlet>
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
@@ -58,6 +65,10 @@
 	<servlet-mapping>
 		<servlet-name>payController</servlet-name>
 		<url-pattern>/payController</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ProdController</servlet-name>
+		<url-pattern>/ProdController</url-pattern>
 	</servlet-mapping>
 
 </web-app>
